--- a/ArduCopter/ReleaseNotes.txt
+++ b/ArduCopter/ReleaseNotes.txt
@@ -201,6 +201,7 @@ Changes from 4.3.6
     - XPlane support for wider range of aircraft
 ------------------------------------------------------------------
 Copter 4.3.7-beta1 24-May-2023
+Copter 4.3.7 31-May-2023 / 4.3.7-beta1 24-May-2023
 Changes from 4.3.6
 1) Bug fixes
     a) EKF3 accel bias calculations bug fix
