--- a/Rover/release-notes.txt
+++ b/Rover/release-notes.txt
@@ -1,5 +1,25 @@
 Rover Release Notes:
 ------------------------------------------------------------------
+Rover 4.4.0-beta3 03-July-2023
+Changes from 4.4.0-beta2
+1) Autopilots specific changes
+    - Holybro KakuteH7-Wing support
+    - JFB100 external watchdog GPIO support added
+    - Pixhawk1-bdshot support
+    - Pixhawk6X-bdshot support
+    - SpeedyBeeF4 loses bdshot support
+2) Circle mode accuracy improvement
+3) Camera and Gimbal related changes
+    - DO_SET_ROI_NONE command support added
+4) Bug fixes
+    - ADSB sensor loss of transceiver message less spammy 
+    - EKF vertical velocity reset fixed on loss of GPS
+    - GPS pre-arm failure message clarified
+    - SERVOx_PROTOCOL "SToRM32 Gimbal Serial" value renamed to "Gimbal" because also used by Siyi
+    - SERIALx_OPTION "Swap" renamed to "SwapTXRX" for clarity
+    - SBF GPS ellipsoid height fixed
+    - Ublox M10S GPS auto configuration fixed
+------------------------------------------------------------------
 Rover 4.4.0-beta2 05-Jun-2023
 Changes from 4.4.0-beta1
 1) Autopilots specific changes
