--- a/Rover/release-notes.txt
+++ b/Rover/release-notes.txt
@@ -8,10 +8,13 @@ Changes from 4.4.0-beta2
     - Pixhawk1-bdshot support
     - Pixhawk6X-bdshot support
     - SpeedyBeeF4 loses bdshot support
-2) Circle mode accuracy improvement
-3) Camera and Gimbal related changes
+2) Device drivers
+    - added LP5562 I2C LED driver
+    - added IS31FL3195 LED driver
+3) Circle mode accuracy improvement
+4) Camera and Gimbal related changes
     - DO_SET_ROI_NONE command support added
-4) Bug fixes
+5) Bug fixes
     - ADSB sensor loss of transceiver message less spammy 
     - EKF vertical velocity reset fixed on loss of GPS
     - GPS pre-arm failure message clarified
