--- a/Rover/release-notes.txt
+++ b/Rover/release-notes.txt
@@ -21,6 +21,7 @@ Changes from 4.4.0-beta2
     - SERVOx_PROTOCOL "SToRM32 Gimbal Serial" value renamed to "Gimbal" because also used by Siyi
     - SERIALx_OPTION "Swap" renamed to "SwapTXRX" for clarity
     - SBF GPS ellipsoid height fixed
+    - Scripting restart memory corruption bug fixed
     - Ublox M10S GPS auto configuration fixed
 ------------------------------------------------------------------
 Rover 4.4.0-beta2 05-Jun-2023
